--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
     </main>
 
     <!-- custom js  -->
-    <script src="js/app.js"></script>
+    <script src="js/main.js."></script>
   </body>
 </html>
